# Omnibus

./: .pre-commit-config.yaml  API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_RUNBOOK.md  DEVELOPER_GUIDE.md  IMPLEMENTATION_PLAN.md  PRD.md  PROGRESS_TRACKER.md  README.md  USER_GUIDE.md  USER_STORIES.md  docker-compose.yml  exampledoc1.docx  exampledoc2.docx  nginx.conf
.github/workflows/: backend-ci.yml  deploy.yml  frontend-ci.yml
backend/: .coverage  .env.example  .gitignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml  performance_baseline.json  pyproject.toml  railway.toml  render.yaml  set_admin.py  test_document_processing.py
backend/ai_chatbot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  api_keys.py  auth.py  chats.py  documents.py  health.py  users.py
backend/app/core/: auth.py  config.py  database.py  encryption.py  logging.py  middleware.py  monitoring.py  supabase.py
backend/app/services/: alerting_service.py  analytics_service.py  audit_service.py  document_chunker.py  document_parser.py  document_processor.py  embedding_service.py  llm_provider.py  llm_service.py  rag_service.py  similarity_search.py  text_cleaner.py  vector_store.py
backend/migrations/: 001_initial_schema.sql  002_sample_data.sql  003_add_chunk_metadata.sql  004_storage_rls_policies.sql  mark_migration_applied.py  run_migrations.py  run_single_migration.py
backend/tests/: check_chroma.py  check_search.py  clean_dup.py  conftest.py  factories.py  mocks.py  test_auth.py  test_chats.py  test_document_chunker.py  test_document_parser.py  test_documents.py  test_health.py  test_migrations.py  test_openai.py  test_rag_pipeline.py  test_supabase_integration.py  test_text_cleaner.py  test_vector_operations.py
backend/tests/performance/: test_performance.py
frontend/: Dockerfile  README.md  angular.json  netlify.toml  nginx.conf  package-lock.json  package.json  vercel.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/core/error-handling/: global-error-handler.service.ts
frontend/src/app/core/guards/: admin.guard.ts  guest.guard.ts
frontend/src/app/core/interceptors/: auth.interceptor.ts  (+2 more)
frontend/src/app/shared/: shared.module.ts
(+105 files in other folders)
